# qa-rag

./: .gitignore  README.md  pyproject.toml
data/: help_center.txt
src/: init_vectorstore.py  main.py
src/app/: __init__.py  config.py  rag_chain.py  vector_db.py
tests/: test_patch.py  test_queries.jsonl
